--- a/public/documentation/security.html
+++ b/public/documentation/security.html
@@ -3,17 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Installation guide for Chamilo 2</title>
-    <link rel="stylesheet" href="../build/legacy_app.css" />
-    <link rel="stylesheet" href="../build/app.css" />
-    <link rel="stylesheet" href="../build/vue.css" />
-    <style>
-        body {width:90%; margin-left: 5%; margin-right: 5%;}
-        h1 {font-size: xxx-large; margin-top: 1em; margin-bottom: 1em;}
-        h2 {margin-top: 1em;}
-        p {margin-bottom: 0.5em; margin-top: 0.5em;}
-        ul {list-style-type: circle; margin-left: 1em;}
-        table {margin: 1em;}
-    </style>
+    <link rel="stylesheet" href="documentation.css" />
 </head>
 <body>
 <h1>Security guide for Chamilo 2</h1>
@@ -75,7 +65,7 @@ In Chamilo 2.0, we intend to send you security-related notifications through the
         it might be a bit more expensive now, but you'll be happy not to have to loose
         all of your data to a hacker who attacked your site.</p>
     <p>Only the following directory has required write
-        permissions from the web server:<br />
+        permissions from the web server during operation (the installation requires config/ and .env to be writeable):<br />
         <ul>
           <li>var/</li>
         </ul>
