--- a/public/documentation/license.html
+++ b/public/documentation/license.html
@@ -2,17 +2,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Chamilo License</title>
-    <link rel="stylesheet" href="../build/legacy_app.css" />
-    <link rel="stylesheet" href="../build/app.css" />
-    <link rel="stylesheet" href="../build/vue.css" />
-    <style>
-        body {width:90%; margin-left: 5%; margin-right: 5%;}
-        h1 {font-size: xxx-large; margin-top: 1em; margin-bottom: 1em;}
-        h2 {margin-top: 1em;}
-        p {margin-bottom: 0.5em; margin-top: 0.5em;}
-        ul {list-style-type: circle; margin-left: 1em;}
-        table {margin: 1em;}
-    </style>
+    <link rel="stylesheet" href="documentation.css" />
 </head>
 <body>
 <div>
